# Bioinformatics

./: .gitignore  README.md
GEO dataset search/: pyproject.toml  results.txt  tested.txt
GEO dataset search/geosearch/: main.py
codes/coxph/: README.md
coxph/: README.md  check.csv  main.py  pyproject.toml  result.csv  result_2.csv  test_1.csv
coxph/data/: processed.csv
coxph/data/lgg/: lgg_mutation_with_rows.csv
coxph/data/skcm/: skcm_clinical_with_rows.csv
coxph/relevant_results/: result_CD36.csv  result_CFTR.csv  result_EVPL.csv  result_GNG12.csv  result_ITPR3.csv  result_MYO1D.csv  result_PAX6.csv  result_PLP1.csv  result_PREX2.csv  result_SPRY4.csv  result_SYNJ2.csv  result_TUBB4A.csv
coxph/results/: result_FUBP1.csv  result_MUC16.csv  result_NOS1.csv  result_NOTCH1.csv  result_PIK3CA.csv  result_TP53.csv  result_TTN.csv  result_all_genes.csv  significant_covariants_and_genes.csv
coxph/results/frequent_genes_from_lggDataset_with_ATRX/: result_CIC.csv  result_IDH1.csv  result_MUC16.csv  (+3 more)
coxph/src/: coxph.py  main.py
coxph/sum_of_mutations_results/: data_sum_of_mutations.csv
coxph/unique_genes_with_ATRX_results/: result_NF1.csv  result_PIK3CA.csv  result_TP53.csv  result_TTN.csv  result_all_genes_without_CIC.csv  result_all_genes_without_IDH1.csv  result_all_genes_without_MUC16.csv  result_all_genes_without_NF1.csv  result_all_genes_without_PIK3CA.csv  result_all_genes_without_gender.csv  result_all_genes_without_histological_type_astrocytoma.csv  result_all_genes_without_histological_type_oligodendroglioma.csv  significant_covariants_and_genes.csv
(+80 files in other folders)
